Small Java backend fixes
- Eliminate Integer auto-truncation in generated code; the type system
  disallows this since ABS version 1.5.0

- Use immutable lists directly to store lists of fields etc. instead of
  using arrays and converting to lists each time the accessor is called

- Small cosmetic changes in generated code